Refactoring the code to resolve coverage error